@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,12 +37,13 @@ import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 
-import jdk.test.lib.compiler.CompilerUtils;
-import static jdk.test.lib.process.ProcessTools.*;
-
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.Test;
-import static org.testng.Assert.*;
+
+import jdk.test.lib.compiler.CompilerUtils;
+
+import static jdk.test.lib.process.ProcessTools.executeTestJava;
+import static org.testng.Assert.assertTrue;
 
 @Test
 public class OverlappingPackagesTest {
@@ -93,7 +94,7 @@ public class OverlappingPackagesTest {
     public void testOverlapWithBaseModule() throws Exception {
         int exitValue
             = executeTestJava("--module-path", MODS_DIR.toString(),
-                              "-add-modules", "misc",
+                              "--add-modules", "misc",
                               "-m", "test/test.Main")
                 .outputTo(System.out)
                 .errorTo(System.err)
